only install cqlsh on first seed node, which will perform password change

--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -38,4 +38,4 @@
   ansible.builtin.pip:
     name: cqlsh
     state: present
-  when: inventory_hostname in ansible_role_cassandra_seeds
+  when: inventory_hostname == ansible_role_cassandra_seeds[0]
